<resources>
    <string name="app_name">Sparrow</string>

    <!-- Auth -->
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtLogin">Acceder</string>
    <string name="txtSignUp">Registrarse</string>
    <string name="txtAuthWelcome">¡Hola, bienvenido/a a Sparrow!</string>
    <string name="txtGoogleAuth">Autenticarse con Google</string>

    <!-- Preferences -->
    <string name="prefs_file">es.upm.miw.sparrow.PREFERENCE_FILE_KEY</string>

    <!-- Home menu -->
    <string name="btnEditProfile">Editar perfil</string>
    <string name="btnSettings">Ajustes</string>
    <string name="btnLogout">Cerrar sesión</string>
    <string name="btnExit">Salir de la app</string>
    <string name="btnMatches">Partidas</string>
    <string name="emailHint">example@gmail.com</string>
    <string name="drawer_open">Abrir navegación</string>
    <string name="drawer_close">Cerrar navegación</string>

    <!-- Didactic options -->
    <string name="txtMusic">MÚSICA</string>
    <string name="txtArt">ARTE</string>
    <string name="txtMaths">MATEMÁTICAS</string>
    <string name="txtLanguage">LENGUA</string>
    <string name="txtEnglish">INGLÉS</string>

    <!-- Music questions -->
    <string name="hintMusicQuestion">¿Qué compositor...?</string>
    <string name="txtAnswer">Respuesta</string>
    <string name="descImageQuiz">Imagen de la pregunta</string>

    <!-- Dialogs -->
    <string name="txtReturn">Volver</string>
    <string name="txtResults">Resultados</string>
    <string name="hintPoints">3/5</string>
    <string name="txtGameAgain">Volver a jugar</string>
    <string name="txtZazuResults">Zazu contento o serio según el resultado</string>

    <!-- Maths questions -->
    <string name="hintMathsQuestion">¿Cuánto es 2+2?</string>

    <!-- English questions -->
    <string name="hintEnglishQuestion">¿Qué significa "sun" en español?</string>

    <!-- Language questions -->
    <string name="hintLanguageQuestion">¿Qué es un diptongo?</string>

    <!-- Art questions -->
    <string name="hintArtQuestion">¿Quién es este pintor?</string>

    <!-- Avatars-->
    <string name="avatar">Avatar</string>

    <!--Exit quiz dialog -->
    <string name="txtExitText">"Si sales ahora, perderás tu progreso. ¿Quieres volver al menú?"</string>
    <string name="txtWarning">¡ATENCIÓN!</string>
    <string name="txtResume">Continuar</string>
    <string name="txtExit">Salir</string>

    <!-- Matches -->
    <string name="txtCategory">Categoría</string>
    <string name="txtPoints">Puntos</string>
    <string name="txtDate">Fecha</string>

    <!-- Filter -->
    <string name="filter">Filtrar</string>
    <string name="filter_category">Categoría</string>
    <string name="filter_result">Resultado</string>
    <string name="filter_date">Fecha</string>
    <string-array name="filter_categories">
        <item>Todos</item>
        <item>Música</item>
        <item>Arte</item>
        <item>Matemáticas</item>
        <item>Lengua</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="filter_results">
        <item>Todos</item>
        <item>Victorias</item>
        <item>Derrotas</item>
    </string-array>
    <string-array name="filter_dates">
        <item>Más reciente</item>
        <item>Más antigua</item>
    </string-array>

    <!-- Settings -->
    <string name="setting_music">Música</string>

</resources>