<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".ui.activities.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_menu">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTitleFont"
            app:titleTextColor="@color/black" />

        <ScrollView
            android:id="@+id/scrollMenu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/listMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/btnMusic"
                    style="@style/MenuImageButton"
                    android:src="@drawable/ic_music"
                    android:contentDescription="@string/txtMusic"
                    android:layout_marginBottom="12dp"/>

                <ImageButton
                    android:id="@+id/btnArt"
                    style="@style/MenuImageButton"
                    android:src="@drawable/ic_art"
                    android:contentDescription="@string/txtArt"
                    android:layout_marginBottom="12dp"/>

                <ImageButton
                    android:id="@+id/btnMaths"
                    style="@style/MenuImageButton"
                    android:src="@drawable/ic_maths"
                    android:contentDescription="@string/txtMaths"
                    android:layout_marginBottom="12dp"/>

                <ImageButton
                    android:id="@+id/btnLanguage"
                    style="@style/MenuImageButton"
                    android:src="@drawable/ic_language"
                    android:contentDescription="@string/txtLanguage"
                    android:layout_marginBottom="12dp"/>

                <ImageButton
                    android:id="@+id/btnEnglish"
                    style="@style/MenuImageButton"
                    android:src="@drawable/ic_english"
                    android:contentDescription="@string/txtEnglish"
                    android:layout_marginBottom="12dp"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home"
        app:menu="@menu/menu_drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>
