<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="16dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtMaths"
            android:fontFamily="@font/alexandria_bold"
            android:textColor="@color/white"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_bold"
            android:textColor="@color/white"
            android:text="@string/hintPoints"
            android:textAlignment="center"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alexandria_bold"
            android:textColor="@color/white"
            android:text="@string/txtDate"
            android:textAlignment="viewEnd"
            android:maxLines="1"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
