<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".ui.fragments.MathsFragment">

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:tint="@color/auth_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quiz_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/txtMaths"
            style="@style/FragmentTitleStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/timer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="382dp"
            android:layout_height="21dp"
            android:max="10"
            android:progress="10"
            android:progressDrawable="@drawable/progess_timer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/question"
            android:layout_width="382dp"
            android:layout_height="86dp"
            android:fontFamily="@font/alexandria_bold"
            android:gravity="center"
            android:text="@string/hintMathsQuestion"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.037" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="382dp"
            android:layout_height="217dp"
            android:contentDescription="@string/descImageQuiz"
            android:src="@drawable/maths_quiz_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintVertical_bias="0.09" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/answer1"
            style="@style/Answer1ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintVertical_bias="0.211" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/answer2"
            style="@style/Answer2ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/answer1"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintVertical_bias="0.209" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/answer3"
            style="@style/Answer3ButtonStyle"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answer1"
            app:layout_constraintVertical_bias="0.273" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/answer4"
            style="@style/Answer4ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toEndOf="@+id/answer3"
            app:layout_constraintTop_toBottomOf="@+id/answer2"
            app:layout_constraintVertical_bias="0.273" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
